feature: 메일링 시스템 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,6 @@ spring:
   config:
     import:
       - classpath:/common/common.yml
+      - classpath:/common/mail.yml
+      - classpath:/common/auth.yml
       - optional:file:.env[.properties]
