feature: 에러 메시지 추가

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,5 +1,6 @@
 # Bean Validation
 NotBlank={0} \uD544\uC218 \uAC12\uC774 \uC785\uB825\uB418\uC9C0 \uC54A\uC558\uC2B5\uB2C8\uB2E4.
+NotNull={0} \uD544\uC218 \uAC12\uC774 \uC785\uB825\uB418\uC9C0 \uC54A\uC558\uC2B5\uB2C8\uB2E4.
 Size={0}\uC740 {2}\uC790 \uC774\uC0C1 {1}\uC790 \uC774\uD558\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 Email={0}\uC740 \uC774\uBA54\uC77C \uD615\uC2DD\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4.
 Pattern={0} \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
@@ -8,5 +9,18 @@ Max={0}\uC740 {1} \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 Length={0}\uC740 {1}\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 Range={0}\uC740 {1} \uC774\uC0C1 {2} \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 
-# 1. Member
-member.not.found=\uAD6C\uC131\uC6D0\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4. (id = {0})
+# Member
+member.not.found=\uAD6C\uC131\uC6D0\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+
+# Auth
+initialize.token.not.found=\uBE44\uBC00\uBC88\uD638 \uCD08\uAE30\uD654 \uD1A0\uD070\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uAC70\uB098 \uB9CC\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+member.already.registered=\uC774\uBBF8 \uAC00\uC785\uD55C \uD68C\uC6D0\uC785\uB2C8\uB2E4.
+password.same=\uC0C8\uB85C\uC6B4 \uBE44\uBC00\uBC88\uD638\uB294 \uAE30\uC874 \uBE44\uBC00\uBC88\uD638\uC640 \uB2E4\uB974\uAC8C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+password.length=\uBE44\uBC00\uBC88\uD638\uB294 8\uC790 \uC774\uC0C1 20\uC790 \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+password.uppercase=\uBE44\uBC00\uBC88\uD638\uB294 \uB300\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
+password.lowercase=\uBE44\uBC00\uBC88\uD638\uB294 \uC18C\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
+password.special.character=\uBE44\uBC00\uBC88\uD638\uB294 \uD2B9\uC218\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
+password.confirm=\uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+
+# MAIL
+mail.send.fail=\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
