--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -24,3 +24,4 @@ password.confirm=\uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uC77C\uCE58\uD558\
 
 # MAIL
 mail.send.fail=\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
+invalid.email.domain=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC774\uBA54\uC77C \uB3C4\uBA54\uC778\uC785\uB2C8\uB2E4.
