feature: 비밀번호 변경(초기화) 구현

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -21,7 +21,8 @@ password.uppercase=\uBE44\uBC00\uBC88\uD638\uB294 \uB300\uBB38\uC790\uB97C \uD3E
 password.lowercase=\uBE44\uBC00\uBC88\uD638\uB294 \uC18C\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
 password.special.character=\uBE44\uBC00\uBC88\uD638\uB294 \uD2B9\uC218\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
 password.confirm=\uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+member.not.registered=\uAC00\uC785\uB418\uC9C0 \uC54A\uC740 \uD68C\uC6D0\uC785\uB2C8\uB2E4.
 
-# MAIL
+# Mail
 mail.send.fail=\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 invalid.email.domain=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC774\uBA54\uC77C \uB3C4\uBA54\uC778\uC785\uB2C8\uB2E4.
