--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -26,3 +26,6 @@ member.not.registered=\uAC00\uC785\uB418\uC9C0 \uC54A\uC740 \uD68C\uC6D0\uC785\u
 # Mail
 mail.send.fail=\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 invalid.email.domain=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC774\uBA54\uC77C \uB3C4\uBA54\uC778\uC785\uB2C8\uB2E4.
+
+# Project
+project.not.found=\uD504\uB85C\uC81D\uD2B8\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
