feature: 계약 관련 에러코드 추가

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -8,10 +8,8 @@ Min={0}\uC740 {1} \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4.
 Max={0}\uC740 {1} \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 Length={0}\uC740 {1}\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 Range={0}\uC740 {1} \uC774\uC0C1 {2} \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4.
-
 # Member
 member.not.found=\uAD6C\uC131\uC6D0\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
-
 # Auth
 initialize.token.not.found=\uBE44\uBC00\uBC88\uD638 \uCD08\uAE30\uD654 \uD1A0\uD070\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uAC70\uB098 \uB9CC\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 member.already.registered=\uC774\uBBF8 \uAC00\uC785\uD55C \uD68C\uC6D0\uC785\uB2C8\uB2E4.
@@ -22,7 +20,10 @@ password.lowercase=\uBE44\uBC00\uBC88\uD638\uB294 \uC18C\uBB38\uC790\uB97C \uD3E
 password.special.character=\uBE44\uBC00\uBC88\uD638\uB294 \uD2B9\uC218\uBB38\uC790\uB97C \uD3EC\uD568\uD574\uC57C \uD569\uB2C8\uB2E4.
 password.confirm=\uBE44\uBC00\uBC88\uD638 \uD655\uC778\uC774 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 member.not.registered=\uAC00\uC785\uB418\uC9C0 \uC54A\uC740 \uD68C\uC6D0\uC785\uB2C8\uB2E4.
-
 # Mail
 mail.send.fail=\uBA54\uC77C \uC804\uC1A1\uC5D0 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 invalid.email.domain=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uC774\uBA54\uC77C \uB3C4\uBA54\uC778\uC785\uB2C8\uB2E4.
+#Project
+project.not.found=\uD574\uB2F9 \uD504\uB85C\uC81D\uD2B8\uB294 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+# Contract
+contract.not.found=\uD574\uB2F9 \uACC4\uC57D\uC740 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
