--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -32,4 +32,5 @@ team.not.found=\uC874\uC7AC\uD558\uC9C0 \uC54A\uB294 \uD300\uC785\uB2C8\uB2E4.
 project.not.found=\uD574\uB2F9 \uD504\uB85C\uC81D\uD2B8\uB294 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 # Contract
 contract.not.found=\uD574\uB2F9 \uACC4\uC57D\uC740 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+contract.already.inactivated=\uC774\uBBF8 \uC0AD\uC81C \uCC98\uB9AC\uB41C \uACC4\uC57D\uC785\uB2C8\uB2E4.
 
