feature : 협력사 상세 조회 API 개발

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -11,6 +11,8 @@ Range={0}\uC740 {1} \uC774\uC0C1 {2} \uC774\uD558\uC5EC\uC57C \uD569\uB2C8\uB2E4
 # Member
 member.not.found=\uAD6C\uC131\uC6D0\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 member.email.already.exists=\uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uC774\uBA54\uC77C \uC785\uB2C8\uB2E4.
+# Partners
+partners.not.found=\uD611\uB825\uC0AC\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 # Auth
 initialize.token.not.found=\uBE44\uBC00\uBC88\uD638 \uCD08\uAE30\uD654 \uD1A0\uD070\uC774 \uC874\uC7AC\uD558\uC9C0 \uC54A\uAC70\uB098 \uB9CC\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 member.already.registered=\uC774\uBBF8 \uAC00\uC785\uD55C \uD68C\uC6D0\uC785\uB2C8\uB2E4.
