--- a/src/main/resources/common/mail.yml
+++ b/src/main/resources/common/mail.yml
@@ -2,8 +2,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: iabacus
+    password: iabacus202411!
     properties:
       mail:
         smtp:
